add translation [skip ci]

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -227,6 +227,7 @@
   "custom_drag": "مخصص (عقد وسحب)",
   "custom_redeem_amount": "مبلغ الاسترداد مخصص",
   "custom_value": "القيمة الجمركية",
+  "customBackgroundDescription": "لديك بالفعل خلفية مخصصة. \\ ndo تريد استبدالها أو إزالتها؟",
   "dark_theme": "داكن",
   "debit_card": "بطاقة ائتمان",
   "debit_card_terms": "يخضع تخزين واستخدام رقم بطاقة الدفع الخاصة بك (وبيانات الاعتماد المقابلة لرقم بطاقة الدفع الخاصة بك) في هذه المحفظة الرقمية لشروط وأحكام اتفاقية حامل البطاقة المعمول بها مع جهة إصدار بطاقة الدفع ، كما هو معمول به من وقت لآخر.",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "لا يبدو أن ممثلك في وضع جيد. اضغط هنا لاختيار واحدة جديدة",
   "repeat_wallet_password": "كرر كلمة مرور المحفظة",
   "repeated_password_is_incorrect": "كلمة المرور المتكررة غير صحيحة. يرجى تكرار كلمة مرور المحفظة مرة أخرى.",
+  "replace": "يستبدل",
   "requested": "مطلوب",
   "require_for_adding_contacts": "تتطلب إضافة جهات اتصال",
   "require_for_all_security_and_backup_settings": "مطلوب لجميع إعدادات الأمان والنسخ الاحتياطي",
