--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Персонализиране (задръжте и плъзнете)",
   "custom_redeem_amount": "Персонализирана сума за използване",
   "custom_value": "Персонализирана стойност",
+  "customBackgroundDescription": "Вече имате персонализиран фон. \\ Ndo искате ли да го замените или премахнете?",
   "dark_theme": "Тъмно",
   "debit_card": "Дебитна карта",
   "debit_card_terms": "Съхранението и използването на данните от вашата платежна карта в този дигитален портфейл подлежат на условията на съответното съгласие за картодържец от издателя на картата.",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "Вашият представител изглежда не е в добро състояние. Докоснете тук, за да изберете нов",
   "repeat_wallet_password": "Повторете паролата на портфейла",
   "repeated_password_is_incorrect": "Многократната парола е неправилна. Моля, повторете отново паролата за портфейла.",
+  "replace": "Заменете",
   "requested": "Поискано",
   "require_for_adding_contacts": "Изисква се за добавяне на контакти",
   "require_for_all_security_and_backup_settings": "Изисква се за всички настройки за сигурност и архивиране",
