--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Custom (Hold and Drag)",
   "custom_redeem_amount": "Vlastní částka pro uplatnění",
   "custom_value": "Vlastní hodnota",
+  "customBackgroundDescription": "Už máte vlastní pozadí. \\ Ndo ho chcete vyměnit nebo odstranit?",
   "dark_theme": "Tmavý",
   "debit_card": "Debetní karta",
   "debit_card_terms": "Uložení a použití vašeho čísla platební karty (a přihlašovací údaje k vašemu číslu karty) v této digitální peněžence se řídí Obchodními podmínkami smlouvy příslušného držitele karty s vydavatelem karty (v jejich nejaktuálnější verzi).",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "Zdá se, že váš zástupce není v dobrém stavu. Klepnutím zde vyberte nový",
   "repeat_wallet_password": "Opakujte heslo peněženky",
   "repeated_password_is_incorrect": "Opakované heslo je nesprávné. Znovu opakujte heslo peněženky.",
+  "replace": "Nahradit",
   "requested": "Požadováno",
   "require_for_adding_contacts": "Vyžadovat pro přidání kontaktů",
   "require_for_all_security_and_backup_settings": "Vyžadovat všechna nastavení zabezpečení a zálohování",
