--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Custom (Hold and Drag)",
   "custom_redeem_amount": "Benutzerdefinierter Einlösungsbetrag",
   "custom_value": "Benutzerdefinierten Wert",
+  "customBackgroundDescription": "Sie haben bereits einen benutzerdefinierten Hintergrund. \\ Ndo Sie möchten ihn ersetzen oder entfernen?",
   "dark_theme": "Dunkel",
   "debit_card": "Debitkarte",
   "debit_card_terms": "Die Speicherung und Nutzung Ihrer Zahlungskartennummer (und Ihrer Zahlungskartennummer entsprechenden Anmeldeinformationen) in dieser digitalen Wallet unterliegt den Allgemeinen Geschäftsbedingungen des geltenden Karteninhabervertrags mit dem Zahlungskartenaussteller, gültig ab von Zeit zu Zeit.",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "Ihr Vertreter scheint nicht gut zu sein. Tippen Sie hier, um eine neue auszuwählen",
   "repeat_wallet_password": "Wiederholen Sie das Walletkennwort",
   "repeated_password_is_incorrect": "Wiederholtes Passwort ist falsch. Bitte wiederholen Sie das Walletkennwort erneut.",
+  "replace": "Ersetzen",
   "requested": "Angefordert",
   "require_for_adding_contacts": "Erforderlich zum Hinzufügen von Kontakten",
   "require_for_all_security_and_backup_settings": "Für alle Sicherheits- und Sicherungseinstellungen erforderlich",
