--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Custom (mantenía y arrastre)",
   "custom_redeem_amount": "Cantidad de canje personalizada",
   "custom_value": "Valor personalizado",
+  "customBackgroundDescription": "Ya tiene un fondo personalizado. \\ Ndo desea reemplazarlo o eliminarlo?",
   "dark_theme": "Oscuro",
   "debit_card": "Tarjeta de Débito",
   "debit_card_terms": "El almacenamiento y el uso de su número de tarjeta de pago (y las credenciales correspondientes a su número de tarjeta de pago) en esta billetera digital están sujetos a los Términos y condiciones del acuerdo del titular de la tarjeta aplicable con el emisor de la tarjeta de pago, en vigor desde tiempo al tiempo.",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "Tu representante no parece estar en buena posición. Toca aquí para seleccionar uno nuevo",
   "repeat_wallet_password": "Repite la contraseña de billetera",
   "repeated_password_is_incorrect": "La contraseña repetida es incorrecta. Repite la contraseña de la billetera nuevamente.",
+  "replace": "Reemplazar",
   "requested": "Solicitado",
   "require_for_adding_contacts": "Requerido para agregar contactos",
   "require_for_all_security_and_backup_settings": "Requerido para todas las configuraciones de seguridad y copia de seguridad",
