--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Personnalisé (Maintenir et Glisser)",
   "custom_redeem_amount": "Montant d'échange personnalisé",
   "custom_value": "Valeur personnalisée",
+  "customBackgroundDescription": "Vous avez déjà un arrière-plan personnalisé. \\ NDO Vous souhaitez le remplacer ou le supprimer?",
   "dark_theme": "Sombre",
   "debit_card": "Carte de débit",
   "debit_card_terms": "Le stockage et l'utilisation de votre numéro de carte de paiement (et des informations d'identification correspondant à votre numéro de carte de paiement) dans ce portefeuille (wallet) numérique peuvent être soumis aux conditions générales de l'accord du titulaire de carte parfois en vigueur avec l'émetteur de la carte de paiement.",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "Votre représentant ne semble pas être en règle. Appuyez ici pour en sélectionner un nouveau",
   "repeat_wallet_password": "Répétez le mot de passe du portefeuille",
   "repeated_password_is_incorrect": "Le mot de passe répété est incorrect. Veuillez répéter le mot de passe du portefeuille.",
+  "replace": "Remplacer",
   "requested": "Demandé",
   "require_for_adding_contacts": "Requis pour ajouter des contacts",
   "require_for_all_security_and_backup_settings": "Exiger pour tous les paramètres de sécurité et de sauvegarde",
