--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Al'ada (riƙe da ja)",
   "custom_redeem_amount": "Adadin Fansa na Musamman",
   "custom_value": "Darajar al'ada",
+  "customBackgroundDescription": "Kun riga kun sami wani al'ada na al'ada. \\ NODO kake son maye gurbinsa ko cire shi?",
   "dark_theme": "Duhu",
   "debit_card": "Katin Zare kudi",
   "debit_card_terms": "Adana da amfani da lambar katin kuɗin ku (da takaddun shaida masu dacewa da lambar katin kuɗin ku) a cikin wannan walat ɗin dijital suna ƙarƙashin Sharuɗɗa da Sharuɗɗa na yarjejeniya mai amfani da katin tare da mai fitar da katin biyan kuɗi, kamar yadda yake aiki daga lokaci zuwa lokaci.",
@@ -667,6 +668,7 @@
   "rep_warning_sub": "Wakilinku bai bayyana ya kasance cikin kyakkyawan yanayi ba. Matsa nan don zaɓar sabon",
   "repeat_wallet_password": "Maimaita kalmar sirri",
   "repeated_password_is_incorrect": "Maimaita kalmar sirri ba daidai ba ce. Da fatan za a sake maimaita kalmar sirri.",
+  "replace": "Canza",
   "requested": "Nema",
   "require_for_adding_contacts": "Bukatar ƙara lambobin sadarwa",
   "require_for_all_security_and_backup_settings": "Bukatar duk tsaro da saitunan wariyar ajiya",
