--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -227,6 +227,7 @@
   "custom_drag": "कस्टम (पकड़ और खींचें)",
   "custom_redeem_amount": "कस्टम रिडीम राशि",
   "custom_value": "कस्टम मूल्य",
+  "customBackgroundDescription": "आपके पास पहले से ही एक कस्टम पृष्ठभूमि है। \\ ndo आप इसे बदलना या हटाना चाहते हैं?",
   "dark_theme": "अंधेरा",
   "debit_card": "डेबिट कार्ड",
   "debit_card_terms": "इस डिजिटल वॉलेट में आपके भुगतान कार्ड नंबर (और आपके भुगतान कार्ड नंबर से संबंधित क्रेडेंशियल) का भंडारण और उपयोग भुगतान कार्ड जारीकर्ता के साथ लागू कार्डधारक समझौते के नियमों और शर्तों के अधीन है, जैसा कि प्रभावी है समय - समय पर।",
@@ -667,6 +668,7 @@
   "rep_warning_sub": "आपका प्रतिनिधि अच्छी स्थिति में नहीं दिखाई देता है। एक नया चयन करने के लिए यहां टैप करें",
   "repeat_wallet_password": "वॉलेट पासवर्ड दोहराएं",
   "repeated_password_is_incorrect": "बार -बार पासवर्ड गलत है। कृपया फिर से वॉलेट पासवर्ड दोहराएं।",
+  "replace": "प्रतिस्थापित करें",
   "requested": "अनुरोधित",
   "require_for_adding_contacts": "संपर्क जोड़ने के लिए आवश्यकता है",
   "require_for_all_security_and_backup_settings": "सभी सुरक्षा और बैकअप सेटिंग्स की आवश्यकता है",
