--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Prilagođeni (držite i povucite)",
   "custom_redeem_amount": "Prilagođeni iznos otkupa",
   "custom_value": "Prilagođena vrijednost",
+  "customBackgroundDescription": "Već imate prilagođenu pozadinu. \\ NDO želite je zamijeniti ili ukloniti?",
   "dark_theme": "Tamna",
   "debit_card": "Debitna kartica",
   "debit_card_terms": "Pohranjivanje i korištenje broja vaše platne kartice (i vjerodajnica koje odgovaraju broju vaše platne kartice) u ovom digitalnom novčaniku podliježu Uvjetima i odredbama važećeg ugovora vlasnika kartice s izdavateljem platne kartice, koji su na snazi ​​od S vremena na vrijeme.",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "Čini se da vaš predstavnik nije u dobrom stanju. Dodirnite ovdje za odabir novog",
   "repeat_wallet_password": "Ponovite lozinku za novčanik",
   "repeated_password_is_incorrect": "Ponovljena lozinka je netočna. Molimo ponovite lozinku za novčanik.",
+  "replace": "Zamijeniti",
   "requested": "Tražen",
   "require_for_adding_contacts": "Zahtijeva za dodavanje kontakata",
   "require_for_all_security_and_backup_settings": "Zahtijeva za sve postavke sigurnosti i sigurnosne kopije",
