--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Khusus (tahan dan seret)",
   "custom_redeem_amount": "Jumlah Tukar Kustom",
   "custom_value": "Nilai khusus",
+  "customBackgroundDescription": "Anda sudah memiliki latar belakang khusus. \\ No Anda ingin mengganti atau menghapusnya?",
   "dark_theme": "Gelap",
   "debit_card": "Kartu Debit",
   "debit_card_terms": "Penyimpanan dan penggunaan nomor kartu pembayaran Anda (dan kredensial yang sesuai dengan nomor kartu pembayaran Anda) dalam dompet digital ini tertakluk pada Syarat dan Ketentuan persetujuan pemegang kartu yang berlaku dengan penerbit kartu pembayaran, seperti yang berlaku dari waktu ke waktu.",
@@ -667,6 +668,7 @@
   "rep_warning_sub": "Perwakilan Anda tampaknya tidak bereputasi baik. Ketuk di sini untuk memilih yang baru",
   "repeat_wallet_password": "Ulangi Kata Sandi Dompet",
   "repeated_password_is_incorrect": "Kata sandi yang diulang tidak benar. Harap ulangi kata sandi dompet lagi.",
+  "replace": "Mengganti",
   "requested": "Diminta",
   "require_for_adding_contacts": "Membutuhkan untuk menambahkan kontak",
   "require_for_all_security_and_backup_settings": "Memerlukan untuk semua pengaturan keamanan dan pencadangan",
