--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -227,6 +227,7 @@
   "custom_drag": "စိတ်ကြိုက် (Drag)",
   "custom_redeem_amount": "စိတ်ကြိုက်သုံးငွေပမာဏ",
   "custom_value": "စိတ်ကြိုက်တန်ဖိုး",
+  "customBackgroundDescription": "သင့်တွင်စိတ်ကြိုက်နောက်ခံရှိသည်။ \\ n ကိုသင်အစားထိုးသို့မဟုတ်ဖယ်ရှားလိုပါသလား။",
   "dark_theme": "မှောငျမိုကျသော",
   "debit_card": "ဒက်ဘစ်ကတ်",
   "debit_card_terms": "ဤဒစ်ဂျစ်တယ်ပိုက်ဆံအိတ်ရှိ သင့်ငွေပေးချေမှုကတ်နံပါတ် (နှင့် သင့်ငွေပေးချေကတ်နံပါတ်နှင့် သက်ဆိုင်သောအထောက်အထားများ) ၏ သိုလှောင်မှုနှင့် အသုံးပြုမှုသည် အချိန်အခါနှင့်အမျှ သက်ရောက်မှုရှိသကဲ့သို့ ကတ်ကိုင်ဆောင်ထားသူ၏ သဘောတူညီချက်၏ စည်းကမ်းသတ်မှတ်ချက်များနှင့် ကိုက်ညီပါသည်။",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "သင်၏ကိုယ်စားလှယ်သည်ကောင်းမွန်သောရပ်တည်မှုတွင်မဖြစ်သင့်ပါ။ အသစ်တစ်ခုကိုရွေးချယ်ရန်ဤနေရာတွင်အသာပုတ်ပါ",
   "repeat_wallet_password": "ပိုက်ဆံအိတ်စကားဝှက်ကိုပြန်လုပ်ပါ",
   "repeated_password_is_incorrect": "ထပ်ခါတလဲလဲစကားဝှက်မမှန်ကန်ပါ ကျေးဇူးပြုပြီးပိုက်ဆံအိတ်စကားဝှက်ကိုပြန်လုပ်ပါ။",
+  "replace": "ပြန်လည်နေရာချ",
   "requested": "တောင်းဆိုခဲ့သည်",
   "require_for_adding_contacts": "အဆက်အသွယ်များထည့်ရန် လိုအပ်သည်။",
   "require_for_all_security_and_backup_settings": "လုံခြုံရေးနှင့် အရန်ဆက်တင်များအားလုံးအတွက် လိုအပ်ပါသည်။",
