--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Custom (vasthouden en slepen)",
   "custom_redeem_amount": "Aangepast inwisselbedrag",
   "custom_value": "Aangepaste waarde",
+  "customBackgroundDescription": "Je hebt al een aangepaste achtergrond. \\ Ndo wilt u deze vervangen of verwijderen?",
   "dark_theme": "Donker",
   "debit_card": "Debetkaart",
   "debit_card_terms": "De opslag en het gebruik van uw betaalkaartnummer (en inloggegevens die overeenkomen met uw betaalkaartnummer) in deze digitale portemonnee zijn onderworpen aan de Algemene voorwaarden van de toepasselijke kaarthouderovereenkomst met de uitgever van de betaalkaart, zoals van kracht vanaf tijd tot tijd.",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "Uw vertegenwoordiger lijkt niet goed te staan. Tik hier om een ​​nieuwe te selecteren",
   "repeat_wallet_password": "Herhaal het Wallet -wachtwoord",
   "repeated_password_is_incorrect": "Herhaald wachtwoord is onjuist. Herhaal het Wallet -wachtwoord opnieuw.",
+  "replace": "Vervangen",
   "requested": "Gevraagd",
   "require_for_adding_contacts": "Vereist voor het toevoegen van contacten",
   "require_for_all_security_and_backup_settings": "Vereist voor alle beveiligings- en back-upinstellingen",
