--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Пользователь (удерживайте и перетаскивайте)",
   "custom_redeem_amount": "Пользовательская сумма погашения",
   "custom_value": "Пользовательское значение",
+  "customBackgroundDescription": "У вас уже есть пользовательский фон. \\ Ndo вы хотите заменить или удалить его?",
   "dark_theme": "Темная",
   "debit_card": "Дебетовая карта",
   "debit_card_terms": "Хранение и использование номера вашей платежной карты (и учетных данных, соответствующих номеру вашей платежной карты) в этом цифровом кошельке регулируются положениями и условиями применимого соглашения держателя карты с эмитентом платежной карты, действующим с время от времени.",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "Ваш представитель, похоже, не в хорошей репутации. Нажмите здесь, чтобы выбрать новый",
   "repeat_wallet_password": "Повторите пароль кошелька",
   "repeated_password_is_incorrect": "Повторный пароль неверен. Пожалуйста, повторите пароль кошелька снова.",
+  "replace": "Заменять",
   "requested": "Запрошен",
   "require_for_adding_contacts": "Требовать добавления контактов",
   "require_for_all_security_and_backup_settings": "Требовать все настройки безопасности и резервного копирования",
