--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -227,6 +227,7 @@
   "custom_drag": "กำหนดเอง (ค้างและลาก)",
   "custom_redeem_amount": "จำนวนรับคืนที่กำหนดเอง",
   "custom_value": "ค่าที่กำหนดเอง",
+  "customBackgroundDescription": "คุณมีพื้นหลังที่กำหนดเองแล้วคุณต้องการแทนที่หรือลบออกหรือไม่?",
   "dark_theme": "เข้ม",
   "debit_card": "บัตรเดบิต",
   "debit_card_terms": "การเก็บรักษาและใช้หมายเลขบัตรจ่ายเงิน (และข้อมูลประจำตัวที่เกี่ยวข้องกับหมายเลขบัตรจ่ายเงิน) ในกระเป๋าดิจิทัลนี้ จะต้องยึดถือข้อกำหนดและเงื่อนไขของข้อตกลงผู้ใช้บัตรของผู้ถือบัตรที่เกี่ยวข้องกับบัตรผู้ถือบัตร ซึ่งจะมีผลตั้งแต่เวลานั้น",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "ตัวแทนของคุณดูเหมือนจะไม่อยู่ในสถานะที่ดี แตะที่นี่เพื่อเลือกอันใหม่",
   "repeat_wallet_password": "ทำซ้ำรหัสผ่านกระเป๋าเงิน",
   "repeated_password_is_incorrect": "รหัสผ่านซ้ำไม่ถูกต้อง โปรดทำซ้ำรหัสผ่านกระเป๋าเงินอีกครั้ง",
+  "replace": "แทนที่",
   "requested": "ได้รับการร้องขอ",
   "require_for_adding_contacts": "ต้องการสำหรับการเพิ่มผู้ติดต่อ",
   "require_for_all_security_and_backup_settings": "จำเป็นสำหรับการตั้งค่าความปลอดภัยและการสำรองข้อมูลทั้งหมด",
