--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Pasadya (Hawakan at I-drag)",
   "custom_redeem_amount": "Pasadyang Tinubos ang Halaga",
   "custom_value": "Pasadyang Halaga",
+  "customBackgroundDescription": "Mayroon ka nang isang pasadyang background. \\ Ndo nais mong palitan o alisin ito?",
   "dark_theme": "Dark",
   "debit_card": "Debit Card",
   "debit_card_terms": "Ang pag-iimbak at paggamit ng iyong numero sa card (at mga kredensyal na nauugnay sa numero ng iyong card sa pagbabayad) sa pagbabayad sa digital wallet na ito ay napapailalim sa mga tuntunin at kundisyon ng naaangkop na kasunduan sa may-ari ng card kasama ang nagbigay ng card ng pagbabayad, na may bisa sa pana-panahon.",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "Ang iyong representative ay hindi lilitaw na nasa mabuting kalagayan. Tapikin dito upang pumili ng bago",
   "repeat_wallet_password": "Ulitin ang password ng wallet",
   "repeated_password_is_incorrect": "Ang paulit-ulit na password ay hindi tama. Mangyaring ulitin muli ang password ng wallet.",
+  "replace": "Palitan",
   "requested": "Hiniling",
   "require_for_adding_contacts": "Nangangailangan para sa pagdaragdag ng mga contact",
   "require_for_all_security_and_backup_settings": "Nangangailangan para sa lahat ng mga setting ng seguridad at backup",
