--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -227,6 +227,7 @@
   "custom_drag": "На замовлення (утримуйте та перетягуйте)",
   "custom_redeem_amount": "Власна сума викупу",
   "custom_value": "Спеціальне значення",
+  "customBackgroundDescription": "У вас вже є спеціальний фон. \\ Ndo ви хочете замінити або видалити його?",
   "dark_theme": "Темна",
   "debit_card": "Дебетова картка",
   "debit_card_terms": "Зберігання та використання номера вашої платіжної картки (та облікових даних, які відповідають номеру вашої платіжної картки) у цьому цифровому гаманці регулюються Умовами відповідної угоди власника картки з емітентом платіжної картки, що діє з час від часу.",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "Ваш представник, схоже, не має доброго становища. Торкніться тут, щоб вибрати новий",
   "repeat_wallet_password": "Повторіть пароль гаманця",
   "repeated_password_is_incorrect": "Повторний пароль невірний. Будь ласка, повторіть пароль гаманця ще раз.",
+  "replace": "Замінити",
   "requested": "Запитуваний",
   "require_for_adding_contacts": "Потрібен для додавання контактів",
   "require_for_all_security_and_backup_settings": "Вимагати всіх налаштувань безпеки та резервного копіювання",
