--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -227,6 +227,7 @@
   "custom_drag": "کسٹم (ہولڈ اینڈ ڈریگ)",
   "custom_redeem_amount": "حسب ضرورت چھڑانے کی رقم",
   "custom_value": "کسٹم ویلیو",
+  "customBackgroundDescription": "آپ کے پاس پہلے سے ہی ایک کسٹم بیک گراؤنڈ ہے۔ \\ n کیا آپ اسے تبدیل کرنا چاہتے ہیں یا اسے ہٹانا چاہتے ہیں؟",
   "dark_theme": "اندھیرا",
   "debit_card": "ڈیبٹ کارڈ",
   "debit_card_terms": "اس ڈیجیٹل والیٹ میں آپ کے ادائیگی کارڈ نمبر (اور آپ کے ادائیگی کارڈ نمبر سے متعلقہ اسناد) کا ذخیرہ اور استعمال ادائیگی کارڈ جاری کنندہ کے ساتھ قابل اطلاق کارڈ ہولڈر کے معاہدے کی شرائط و ضوابط کے ساتھ مشروط ہے، جیسا کہ وقتاً فوقتاً نافذ ہوتا ہے۔",
@@ -667,6 +668,7 @@
   "rep_warning_sub": "آپ کا نمائندہ اچھ standing ے مقام پر نہیں دکھائی دیتا ہے۔ نیا منتخب کرنے کے لئے یہاں ٹیپ کریں",
   "repeat_wallet_password": "بٹوے کا پاس ورڈ دہرائیں",
   "repeated_password_is_incorrect": "بار بار پاس ورڈ غلط ہے۔ براہ کرم دوبارہ پرس کا پاس ورڈ دہرائیں۔",
+  "replace": "تبدیل کریں",
   "requested": "درخواست کی",
   "require_for_adding_contacts": "رابطوں کو شامل کرنے کی ضرورت ہے۔",
   "require_for_all_security_and_backup_settings": "تمام سیکورٹی اور بیک اپ کی ترتیبات کے لیے درکار ہے۔",
