--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Aṣa (mu ati fa)",
   "custom_redeem_amount": "Iye owó l'á máa ná",
   "custom_value": "Iye aṣa",
+  "customBackgroundDescription": "O ti ni lẹhin ibi-pada tẹlẹ. \\ Ndo o fẹ lati rọpo tabi yọ kuro?",
   "dark_theme": "Dúdú",
   "debit_card": "Káàdì ìrajà",
   "debit_card_terms": "Òfin ti olùṣe àjọrò káàdì ìrajà bójú irú ọ̀nà t'á pamọ́ àti a lo òǹkà ti káàdì ìrajà yín (àti ọ̀rọ̀ ìdánimọ̀ tí káàdì náà) nínú àpamọ́wọ́ yìí.",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "Aṣoju rẹ ko han lati wa ni iduro to dara. Fọwọ ba ibi lati yan ọkan titun kan",
   "repeat_wallet_password": "Tun ọrọ igbaniwọle apamọwọ naa",
   "repeated_password_is_incorrect": "Ọrọ igbaniwọle tun jẹ aṣiṣe. Jọwọ tun ọrọigbaniwọle apamọwọ lẹẹkansi.",
+  "replace": "Rọpo",
   "requested": "Beere fun",
   "require_for_adding_contacts": "Beere fun fifi awọn olubasọrọ kun",
   "require_for_all_security_and_backup_settings": "Beere fun gbogbo aabo ati awọn eto afẹyinti",
