--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -227,6 +227,7 @@
   "custom_drag": "定制（保持和拖动）",
   "custom_redeem_amount": "自定义兑换金额",
   "custom_value": "自定义值",
+  "customBackgroundDescription": "您已经有一个自定义背景。\\ ndo要替换或删除它？",
   "dark_theme": "黑暗",
   "debit_card": "借记卡",
   "debit_card_terms": "您的支付卡号（以及与您的支付卡号对应的凭证）在此数字钱包中的存储和使用受适用的持卡人与支付卡发卡机构签订的协议的条款和条件的约束，自时不时。",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "您的代表似乎并不信誉良好。点击这里选择一个新的",
   "repeat_wallet_password": "重复钱包密码",
   "repeated_password_is_incorrect": "重复密码不正确。请再次重复钱包密码。",
+  "replace": "代替",
   "requested": "要求",
   "require_for_adding_contacts": "需要添加联系人",
   "require_for_all_security_and_backup_settings": "需要所有安全和备份设置",
