--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Custom (Hold and Drag)",
   "custom_redeem_amount": "Custom Redeem Amount",
   "custom_value": "Custom Value",
+  "customBackgroundDescription": "You already have a custom background.\\nDo you want to replace or remove it?",
   "dark_theme": "Dark",
   "debit_card": "Debit Card",
   "debit_card_terms": "The storage and usage of your payment card number (and credentials corresponding to your payment card number) in this digital wallet are subject to the Terms and Conditions of the applicable cardholder agreement with the payment card issuer, as in effect from time to time.",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "Your representative does not appear to be in good standing. Tap here to select a new one",
   "repeat_wallet_password": "Repeat the wallet password",
   "repeated_password_is_incorrect": "Repeated password is incorrect. Please repeat the wallet password again.",
+  "replace": "Replace",
   "requested": "Requested",
   "require_for_adding_contacts": "Require for adding contacts",
   "require_for_all_security_and_backup_settings": "Require for all security and backup settings",
