--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Պատվերով (Պահել և Գցել)",
   "custom_redeem_amount": "Պատվերով Փրկագնման Գումար",
   "custom_value": "Պատվերով Արժեք",
+  "customBackgroundDescription": "Դուք արդեն ունեք պատվերով ֆոն: \\ no- ն ուզում ես փոխարինել կամ հեռացնել այն:",
   "dark_theme": "Մութ",
   "debit_card": "Դեբետային քարտ",
   "debit_card_terms": "Ձեր վճարային քարտի համարի (և ձեր վճարային քարտի համարի համապատասխան վկայականներ) պահպանումն ու օգտագործումը այս թվային դրամապանակում ենթակա են վճարային քարտ թողարկող կողմի գործող պայմանների և պայմանագրի",
@@ -664,6 +665,7 @@
   "rep_warning_sub": "Ձեր ներկայացուցիչը չի հայտնվում լավ վիճակում։ Սեղմեք այստեղ նոր ներկայացուցիչ ընտրելու համար",
   "repeat_wallet_password": "Վերականգնել դրամապանակի գաղտնաբառ",
   "repeated_password_is_incorrect": "Վերականգնված գաղտնաբառը սխալ է։ Խնդրում ենք վերականգնել դրամապանակի գաղտնաբառը",
+  "replace": "Փոխարինել",
   "requested": "Պահանջել է",
   "require_for_adding_contacts": "Պահանջվում է կոնտակտներ ավելացնելու համար",
   "require_for_all_security_and_backup_settings": "Պահանջվում է բոլոր անվտանգության և կրկնօրինակման կարգավորումների համար",
