--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Personalizza (Tieni e Trascina)",
   "custom_redeem_amount": "Importo di riscatto personalizzato",
   "custom_value": "Valore personalizzato",
+  "customBackgroundDescription": "Hai già uno sfondo personalizzato. \\ NDO vuoi sostituirlo o rimuoverlo?",
   "dark_theme": "Scuro",
   "debit_card": "Carta di debito",
   "debit_card_terms": "L'archiviazione e l'utilizzo del numero della carta di pagamento (e delle credenziali corrispondenti al numero della carta di pagamento) in questo portafoglio digitale sono soggetti ai Termini e condizioni del contratto applicabile con il titolare della carta con l'emittente della carta di pagamento, come in vigore di tanto in tanto.",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "Il tuo rappresentante non sembra essere in regola. Tocca qui per selezionarne uno nuovo",
   "repeat_wallet_password": "Ripeti la password del portafoglio",
   "repeated_password_is_incorrect": "La password ripetuta non è corretta. Si prega di ripetere di nuovo la password del portafoglio.",
+  "replace": "Sostituire",
   "requested": "Richiesto",
   "require_for_adding_contacts": "Richiedi per l'aggiunta di contatti",
   "require_for_all_security_and_backup_settings": "Richiedi per tutte le impostazioni di sicurezza e backup",
