--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -227,6 +227,7 @@
   "custom_drag": "カスタム（ホールドとドラッグ）",
   "custom_redeem_amount": "カスタム交換金額",
   "custom_value": "カスタム値",
+  "customBackgroundDescription": "あなたはすでにカスタムの背景を持っています。\\ ndoあなたはそれを交換または削除したいですか？",
   "dark_theme": "闇",
   "debit_card": "デビットカード",
   "debit_card_terms": "このデジタルウォレットでの支払いカード番号（および支払いカード番号に対応する資格情報）の保存と使用には、支払いカード発行者との該当するカード所有者契約の利用規約が適用されます。時々。",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "あなたの代表者は良好な状態ではないようです。ここをタップして、新しいものを選択します",
   "repeat_wallet_password": "ウォレットパスワードを繰り返します",
   "repeated_password_is_incorrect": "繰り返しパスワードが正しくありません。ウォレットのパスワードをもう一度繰り返してください。",
+  "replace": "交換する",
   "requested": "リクエスト",
   "require_for_adding_contacts": "連絡先の追加に必要",
   "require_for_all_security_and_backup_settings": "すべてのセキュリティおよびバックアップ設定に必須",
