--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -227,6 +227,7 @@
   "custom_drag": "사용자 지정 (길게 누르고 드래그)",
   "custom_redeem_amount": "사용자 지정 사용 금액",
   "custom_value": "사용자 지정 값",
+  "customBackgroundDescription": "당신은 이미 사용자 정의 배경을 가지고 있습니다. \\ n 교체하거나 제거하고 싶습니까?",
   "dark_theme": "다크 테마",
   "debit_card": "직불 카드",
   "debit_card_terms": "이 디지털 지갑에 결제 카드 번호(및 결제 카드 번호에 해당하는 자격 증명)를 저장하고 사용하는 것은 해당 카드 발급사와의 카드 소지자 계약 이용 약관(수시로 효력 발생)의 적용을 받습니다.",
@@ -666,6 +667,7 @@
   "rep_warning_sub": "귀하의 대표자가 정상 상태가 아닌 것 같습니다. 여기를 탭하여 새 대표자를 선택하세요.",
   "repeat_wallet_password": "지갑 비밀번호 다시 입력",
   "repeated_password_is_incorrect": "반복 입력한 비밀번호가 잘못되었습니다. 지갑 비밀번호를 다시 입력하세요.",
+  "replace": "바꾸다",
   "requested": "요청됨",
   "require_for_adding_contacts": "연락처 추가 시 필요",
   "require_for_all_security_and_backup_settings": "모든 보안 및 백업 설정에 필요",
