--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Niestandardowe (trzymaj i przeciągnij)",
   "custom_redeem_amount": "Niestandardowa kwota wykorzystania",
   "custom_value": "Wartość niestandardowa",
+  "customBackgroundDescription": "Masz już niestandardowe tło. \\ Ndo chcesz je wymienić lub usunąć?",
   "dark_theme": "Ciemny motyw",
   "debit_card": "Karta debetowa",
   "debit_card_terms": "Przechowywanie i używanie numeru karty płatniczej (oraz danych uwierzytelniających odpowiadających numerowi karty płatniczej) w tym portfelu cyfrowym podlega Warunkom odpowiedniej umowy posiadacza karty z wydawcą karty płatniczej, zgodnie z obowiązującym od time do time.",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "Twój przedstawiciel nie wydaje się mieć dobrej opinii. Stuknij tutaj, aby wybrać nowy",
   "repeat_wallet_password": "Powtórz hasło portfela",
   "repeated_password_is_incorrect": "Powtarzane hasło jest nieprawidłowe. Powtórz ponownie hasło portfela.",
+  "replace": "Zastępować",
   "requested": "Wymagany",
   "require_for_adding_contacts": "Wymagane do dodania kontaktów",
   "require_for_all_security_and_backup_settings": "Wymagaj dla wszystkich ustawień zabezpieczeń i kopii zapasowych",
