--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -227,6 +227,7 @@
   "custom_drag": "Özel (Bekle ve Sürükle)",
   "custom_redeem_amount": "Özel Harcama Tutarı",
   "custom_value": "Özel değer",
+  "customBackgroundDescription": "Zaten özel bir geçmişiniz var. \\ NDO Değiştirmek veya kaldırmak mı istiyorsunuz?",
   "dark_theme": "Karanlık",
   "debit_card": "Ön ödemeli Kart",
   "debit_card_terms": "Ödeme kartı numaranızın (ve kart numaranıza karşılık gelen kimlik bilgilerinin) bu dijital cüzdanda saklanması ve kullanılması, zaman zaman yürürlükte olan ödeme kartı veren kuruluşla yapılan ilgili kart sahibi sözleşmesinin Hüküm ve Koşullarına tabidir.",
@@ -665,6 +666,7 @@
   "rep_warning_sub": "Temsilciniz iyi durumda görünmüyor. Yeni bir tane seçmek için buraya dokunun",
   "repeat_wallet_password": "Cüzdan şifresini tekrarlayın",
   "repeated_password_is_incorrect": "Tekrarlanan şifre yanlış. Lütfen cüzdan şifresini tekrarlayın.",
+  "replace": "Yer değiştirmek",
   "requested": "İstenmiş",
   "require_for_adding_contacts": "Kişi eklemek için gerekli",
   "require_for_all_security_and_backup_settings": "Tüm güvenlik ve yedekleme ayarları için iste",
