--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -226,6 +226,7 @@
   "custom_drag": "Tùy chỉnh (Giữ và Kéo)",
   "custom_redeem_amount": "Số tiền Chuộc Tùy chỉnh",
   "custom_value": "Giá trị Tùy chỉnh",
+  "customBackgroundDescription": "Bạn đã có một nền tùy chỉnh. \\ Ndo bạn muốn thay thế hoặc loại bỏ nó?",
   "dark_theme": "Tối",
   "debit_card": "Thẻ Ghi Nợ",
   "debit_card_terms": "Việc lưu trữ và sử dụng số thẻ thanh toán của bạn (và thông tin xác thực tương ứng với số thẻ thanh toán của bạn) trong ví điện tử này phải tuân theo Điều khoản và Điều kiện của thỏa thuận chủ thẻ hiện hành với tổ chức phát hành thẻ thanh toán, theo thời gian.",
@@ -663,6 +664,7 @@
   "rep_warning_sub": "Đại diện của bạn dường như không còn trong tình trạng tốt. Nhấn vào đây để chọn một cái mới",
   "repeat_wallet_password": "Nhập lại mật khẩu ví",
   "repeated_password_is_incorrect": "Mật khẩu nhập lại không chính xác. Vui lòng nhập lại mật khẩu ví.",
+  "replace": "Thay thế",
   "requested": "Được yêu cầu",
   "require_for_adding_contacts": "Yêu cầu khi thêm danh bạ",
   "require_for_all_security_and_backup_settings": "Yêu cầu cho tất cả các cài đặt bảo mật và sao lưu",
